# mongo-db-migrator

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  README.md  code_base_summary.json  config.yaml  docker-compose.yml  pyproject.toml
.github/: branch-protection.yml
.github/workflows/: branch-protection.yml  pr-checks.yml
docker/: Dockerfile.agent
reports/: kitchensink_report_agentic.md  kitchensink_report_agentic_trajectory.txt  spring-petclinic_report_agentic.md  spring-petclinic_report_agentic_trajectory.txt
src/java_migration_tool/: __init__.py  analyzer.py  cli.py  code_processing.py  config.py  llm_client.py  models.py  mongodb_migration.py  openai_client.py  report.py  schema_generator.py
src/java_migration_tool/agentic/: __init__.py  agent_tools.py  analyzer_agent.py  base_agent.py  code_generator_agent.py  main.py  manager_agent.py  schema_designer_agent.py  technical_writer_agent.py  test_generator_agent.py
src/java_migration_tool/modes/: __init__.py  agentic.py  sequential.py
src/java_migration_tool/sequential/: llm_client.py  mongodb_migration.py  report.py  sequential.py
tests/: __init__.py  conftest.py  test_migration_modes.py
